<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="8dp">

        <ImageView
            android:id="@+id/comment_profile_picture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user1_image" />

        <TextView
            android:id="@+id/comment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/comment_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/comment_profile_picture"
            app:layout_constraintTop_toTopOf="@+id/comment_profile_picture" />

        <TextView
            android:id="@+id/comment_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_email"
            app:layout_constraintStart_toStartOf="@+id/comment_name"
            app:layout_constraintTop_toBottomOf="@+id/comment_name" />

        <RatingBar
            android:id="@+id/comment_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="4"
            android:progressBackgroundTint="@color/teal_200"
            app:layout_constraintStart_toStartOf="@+id/comment_email"
            app:layout_constraintTop_toBottomOf="@+id/comment_email" />

        <TextView
            android:id="@+id/comment_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/comment_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment_profile_picture" />

        <TextView
            android:id="@+id/helpful_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/review_helpful"
            app:layout_constraintStart_toStartOf="@+id/comment_body"
            app:layout_constraintTop_toBottomOf="@+id/comment_body" />

        <TextView
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="@+id/helpful_text"
            app:layout_constraintEnd_toEndOf="@+id/comment_body"
            app:layout_constraintTop_toTopOf="@+id/helpful_text" />

        <TextView
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/yes"
            app:layout_constraintBottom_toBottomOf="@+id/no"
            app:layout_constraintEnd_toStartOf="@+id/no"
            app:layout_constraintTop_toTopOf="@+id/no" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>