<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CommentsFragment">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Reviews"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
        app:layout_constraintStart_toEndOf="@+id/back_arrow"
        app:layout_constraintTop_toTopOf="@+id/back_arrow" />

    <ImageView
        android:id="@+id/book_image_in_comment"
        android:layout_width="85dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/book_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_in_comment" />

    <TextView
        android:id="@+id/title_in_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/post_id_in_comment"
        app:layout_constraintStart_toEndOf="@+id/book_image_in_comment"
        app:layout_constraintTop_toBottomOf="@id/back_arrow" />

    <TextView
        android:id="@+id/post_id_in_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_in_comment" />

    <TextView
        android:id="@+id/post_body_in_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/post_body"
        app:layout_constraintEnd_toEndOf="@+id/title_in_comment"
        app:layout_constraintStart_toStartOf="@+id/title_in_comment"
        app:layout_constraintTop_toBottomOf="@+id/title_in_comment" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reviews"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/book_image_in_comment"
        app:layout_constraintTop_toBottomOf="@+id/post_body_in_comment" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_in_comment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/comments_view_holder"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviews" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/comment_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="Add new comment" />
</androidx.constraintlayout.widget.ConstraintLayout>